--- a/wiki/Journal_review.wiki
+++ b/wiki/Journal_review.wiki
@@ -23,8 +23,7 @@ If you don't have Java Web Start installed, you can install PRIDE Inspector loca
 == Using the desktop version == 
 
   # Ensure you have a recent version of Java installed.
-  #  Download the PRIDE Inspector application from:  http://code.google.com/p/pride-toolsuite/
-(See "Feature downloads" on the right block. The last version available will appear there).
+  #  Download the PRIDE Inspector application from [http://code.google.com/p/pride-toolsuite/ PRIDE toolsuite] (See "Feature downloads" on the right block. The last version available will appear there).
   # Once installed, go to that directory in your local computer and double click the corresponding version pride-inspector.jar file. The application will then start.
   # In the PRIDE Inspector "Welcome" page click on "Private Download".
   # A window will pop up. There you need to enter your username and password (it would be the same process for a reviewer account), and click on "Login".
