--- a/wiki/Journal_review.wiki
+++ b/wiki/Journal_review.wiki
@@ -28,3 +28,5 @@ If you don't have Java Web Start installed, you can install PRIDE Inspector loca
   # In the PRIDE Inspector "Welcome" page click on "Private Download".
   # A window will pop up. There you need to enter your username and password (it would be the same process for a reviewer account), and click on "Login". Please use as an example: Username : *review02342*  Password: *nsqNx4tt*
   # The experiments that belong to that account will be listed there.
+
+== Assess quality == 
