--- a/wiki/Journal_review.wiki
+++ b/wiki/Journal_review.wiki
@@ -25,9 +25,13 @@ If you don't have Java Web Start installed, you can install PRIDE Inspector loca
   # Once installed, go to that directory in your local computer and double click the corresponding version pride-inspector.jar file. The application will then start.
   # In the PRIDE Inspector "Welcome" page click on "Private Download".
   # A window will pop up. There you need to enter your username and password (it would be the same process for a reviewer account), and click on "Login". Please use as an example: Username : *review02342*  Password: *nsqNx4tt*
-  # The experiments that belong to that account will be listed there.
+  # The experiments that belong to that account will be listed there (see screenshot below).
 
 http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review/private_download.png
 
 == Quality assessment ==
-PRIDE Inspector offers a few quick ways of assessing the quality of the experiment.  
+PRIDE Inspector offers three quick ways of assessing the overall quality of the experiment.  
+  * Experiment summary
+  * Quality charts
+  * Experiment overview
+
