--- a/wiki/Journal_review.wiki
+++ b/wiki/Journal_review.wiki
@@ -33,4 +33,4 @@ http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review
 PRIDE Inspector offers three quick ways of assessing the overall quality of the experiment: *Experiment summary*, *Summary charts* and *Experiment overview* 
 
 === Experiment summary ===
-Experiment summary 
+Experiment summary provides a snippet view 
