--- a/wiki/Journal_review.wiki
+++ b/wiki/Journal_review.wiki
@@ -33,4 +33,9 @@ http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review
 PRIDE Inspector offers three quick ways of assessing the overall quality of the experiment: *Experiment summary*, *Summary charts* and *Experiment overview* 
 
 === Experiment summary ===
-Experiment summary provides a snippet view 
+The experiment summary panel is located on the bottom-left of the PRIDE Inspector, it offers a snapshot view of the experiment, and is the quickest way of spotting something wrong. It shows whether protein identifications, peptide identifications and spectra are present, also shows different types of post translational modifications present in the experiment (See screenshot below).
+
+http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review/experiment_summary.png 
+
+=== Summary charts ===
+The summary charts panel is located 
