--- a/wiki/Journal_review.wiki
+++ b/wiki/Journal_review.wiki
@@ -59,5 +59,5 @@ You can find out more on the overall information about the experiment, sample de
 
 http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review/experiment_overview.png
 
-=== Detailed quality assessment ===
+== Detailed quality assessment ==
  
