--- a/wiki/Journal_review.wiki
+++ b/wiki/Journal_review.wiki
@@ -29,7 +29,7 @@ If you don't have Java Web Start installed, you can install PRIDE Inspector loca
 
 http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review/private_download.png
 
-==  Quick quality assessment ==
+=  Quick quality assessment =
 PRIDE Inspector offers three quick ways of assessing the overall quality of the experiment: *Experiment Summary*, *Summary Charts* and *Experiment Overview* 
 
 === Experiment Summary ===
@@ -59,5 +59,5 @@ You can find out more on the overall information about the experiment, sample de
 
 http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review/experiment_overview.png
 
-== Detailed quality assessment ==
+= Detailed quality assessment =
  
