Edited wiki page Journal_review through web user interface.

--- a/wiki/Journal_review.wiki
+++ b/wiki/Journal_review.wiki
@@ -62,7 +62,7 @@ http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review
  For detailed quality assessment of a experiment, we recommend you use Protein Tab, Peptide Tab and Spectrum/Chromatogram Tab. Below is a short summary on each Tab's main functionality, for detailed guide, please refer to the help document embedded in the PRIDE Inspector.
 
 === Protein Tab ===
-The Protein Tab provides a protein identification-centric view. It displays all identified proteins. For each protein identification, its related peptide spectrum matches are also displayed. (See screenshot below)
+The Protein Tab provides a protein identification-centric view. It displays all identified proteins. For each protein identification, its related peptide spectrum matches are also displayed. Please note that it is possible to sort the table based on most table headings, so it is possible to instantly focus on proteins having very low or very high numbers of peptides, or those having PTM annotations. (See screenshot below)
 
 http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review/protein_tab.png
 
@@ -70,6 +70,8 @@ http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review
 The Peptide Tab provides a peptide-centric view. All identified peptides are displayed in this area, along with their post translational modifications and spectra. (See screenshot below)
 
 http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/journal-review/protein_tab.png
+
+For those peptides with PTM annotations, it is possible to visualize the peak annotations by enabling amino acid annotations. The modified amino acids will have a (*) symbol next to them (not shown). 
 
 === Spectrum/Chromatogram Tab ===
 The Spectrum/Chromatogram Tab provides a spectrum/chromatogram-centric view. All spectra and chromatogram from the data source are displayed in this area. (See screenshot below)
