--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -12,6 +12,10 @@
 
 ----
 == News ==
+* March 29. 2013:_ [http://code.google.com/p/pride-toolsuite/downloads/list PRIDE Inspector Release Version 1.3.0] is now available:*
+ * Fragment ion table, which can be used to validate experimental fragment ions.
+ * Automatic fragment ion annotation, it is used to generate fragment ions when they are not available.
+
 * February 12. 2013:_ [http://code.google.com/p/pride-toolsuite/downloads/list PRIDE Inspector Release Version 1.2.7] is now available:*
  * Integrated Peptidome dataset into PRIDE public instance.
  * A number of bug fixes relate to database search.
