Edited wiki page PRIDEInspector through web user interface.

--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -100,15 +100,15 @@ The zip file contains also an `examples` folder with 2 sample files: one in mzML
 ----
 
 ==FAQs==
-  # *What to do if PRIDE Inspector runs out of memory?* 
+  1. *What to do if PRIDE Inspector runs out of memory?* 
   Although PRIDE Inspector is design to handle large datasets with small memory footprint, it can still run out of memory if many files or public experiments are opened at the same time. If you have seen such a warning message in a popup window, you should try to increase the memory allocation for the program.This can be done by editing the `config.props` file, this file is located in the `config` folder of the installation directory. In the file, change the `pride.inspector.max.memory=1024` to a higher number, for instance, `pride.inspector.max.memory=2048` will give PRIDE Inspector 2G of memory. Please note that you will need to restart PRIDE Inspector in order for the change to take effect. It is also important to know that on a 32-bit operating system you can not increase this value beyond 2000.
 
-  # *My Mac complains about security and uncertified applications when I try to run the PRIDE Inspector with the Web Start option*
+2. *My Mac complains about security and uncertified applications when I try to run the PRIDE Inspector with the Web Start option*
   Apple has introduced tighter security settings (since version 10.8, Mountain Lion), which by default don't allow applications loaded over the internet to run if they are not from the Apple Store or from an Apple certified programmer. There are currently issues certifying Java Web Start applications and we are working to find a solution. In the meantime, users can change the security settings in their Mac. 
   Go to: Systems Perferences -> Security & Privacy -> General tab and change the "Allow applications downloaded from" setting from the default "Mac App Store and identified developers" to "Anywhere".
   More information can be found [http://support.apple.com/kb/HT5290 here].
 
-  Note: Java has it's own security checks and the PRIDE Inspector is properly equipped with recognised security certificates. Unfortunately Apple does not recognise them for their new security feature. 
+  *Note*: Java has it's own security checks and the PRIDE Inspector is properly equipped with recognised security certificates. Unfortunately Apple does not recognise them for their new security feature. 
  
 [PRIDEInspector top of page]
 
