--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -24,16 +24,16 @@
 ==About PRIDE Inspector==
 The key features include:
   * Fast loading of *mzML* and *PRIDE XML* files.
-  * Search, access and download all PRIDE public database experiments. <font color="#CD5C5C"><i><b>New</b></i></font>
+  * Search, access and download all PRIDE public database experiments.
   * Different views on spectra, chromatogram, protein, peptides and metadata.
-  * Visualize quantification data for both protein and peptide identifications. <font color="#CD5C5C"><i><b>New</b></i></font>
-  * Experiment summary on key measurements of experiment quality. <font color="#CD5C5C"><i><b>New</b></i></font>
-  * Download additional protein details, such as: protein name, sequence. <font color="#CD5C5C"><i><b>New</b></i></font>
-  * Visualize protein sequences and their peptide/PTM coverage. <font color="#CD5C5C"><i><b>New</b></i></font>
-  * Decoy filter on both protein and peptide identifications.  <font color="#CD5C5C"><i><b>New</b></i></font>
+  * Visualize quantification data for both protein and peptide identifications.
+  * Experiment summary on key measurements of experiment quality.
+  * Download additional protein details, such as: protein name, sequence.
+  * Visualize protein sequences and their peptide/PTM coverage.
+  * Decoy filter on both protein and peptide identifications.
   * Visualization for all spectra and chromatograms, including automatic MS2 fragment ion annotations.
   * Possibility to perform a quality assessment of the data using a statistical view with different charts.
-  * User-friendly download facility for private PRIDE experiments.
+  * User-friendly download facility for *private* PRIDE experiments.
 
 The data formats supported by PRIDE Inspector are:
  * *[http://www.psidev.info/index.php?q=node/257 mzML 1.1]*
